@@ -4,6 +4,11 @@ Development Progress	:
 ---------------------------
 
 2011-12-25 (SVN):
+    * common.c (COM_StripExtension): If the input is empty, just write a
+      0 to the output and return.
+    * quakedef.h: updated beta date stamp to 2011-12-27.
+
+2011-12-25 (SVN):
     * view.c (V_UpdatePalette): Make use of CVAR_CHANGED flag of v_gamma.
 
 2011-12-25 (SVN):
